force-app/main/default/objects/UnifiedLinkssotContactPointAddressTun1__dlm/fields/rel_1712301897774_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301897774_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedLinkssotContactPointAddressTu_rel</label>
    <referenceTo>UnifiedssotContactPointAddressTun1__dlm</referenceTo>
    <relationshipLabel>UnifiedLinkssotContactPointAddressTu_rel</relationshipLabel>
    <relationshipName>rel_1712301897774_end</relationshipName>
    <type>Lookup</type>
</CustomField>