force-app/main/default/objects/UnifiedLinkssotContactPointAddressTun1__dlm/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <label>Contact Point Address Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>SourceRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>