force-app/main/default/objects/UnifiedLinkssotContactPointAddressTun1__dlm/fields/ssot__DataSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSourceId__c</fullName>
    <label>Data Source</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>2</primaryIndexOrder>
        <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>